# PWjS_projekt

./: .gitignore  README.md  requirements.txt  util.py
node/: .gitignore  README.md  main.py  pyproject.toml  util.py
root/: README.md  main.py  node.py  requirements.txt
root/static/: style.css
root/templates/: index.html  index2.html
