[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Paweł Pankiewicz <239565@edu.p.lodz.pl>"]

[tool.poetry.scripts]
run = "scripts.run:run"
build = "scripts.build:build"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
psutil = "^5.9.0"
GPUtil = "^1.4.0"
redis = "^4.1.0"
python-decouple = "^3.5"
pyinstaller = "^4.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
tox = "^3.24.5"
ptpython = "^3.0.20"
ipykernel = "^6.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
